# sumnerevans.com

./: .build.yml  .envrc  .eslintrc.js  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .travis.yml  .vale.ini  CLAUDE.md  LICENSE  Makefile  Pipfile  README.md  README.rst  _config.yml  config.toml  feed_urls.txt  flake.nix  generate_index.js  giscus.json  go.mod  go.sum  hugo-rst-patches.patch  hugo.yaml  install.sh  other-feeds.html.tmpl  package-lock.json  package.json  pelicanconf.py  publishconf.py  pyproject.toml  shell.nix  sws_deploy_rsa.enc  travis-website-deploy.enc  travis_sws_deploy_rsa.enc
.devcontainer/: devcontainer.json
.github/: dependabot.yml
_posts/: 2017-06-08-welcome-to-jekyll.markdown
content/: .vim-template:.md  2015-07-23-stockholm.md  2015-07-24-stockholm.md  2015-07-25-stockholm.md  2015-07-26-stockholm-beginning-of-cruise.md  2015-07-27-stockholm-set-sail.md  2015-07-28-helsinki-finland.md  2015-07-29-st-petersburg-russia.md  2015-07-30-st-petersburg-russia.md  2015-07-31-st-petersburg-russia.md  2015-08-01-tallin-estonia.md  2015-08-02-riga-latvia.md  2015-08-03-klaipeda-lithuania.md  2015-08-05-warnemunde-germany-berlin-germany.md  2015-08-06-fredericia-denmark.md  2015-08-07-copenhagen-denmark.md  2015-08-08-copenhagen-denmark-to-london-england.md  2015-08-09-london-england.md  2015-08-10-london-england.md  2015-08-11-london-england-bath-england.md  2015-08-12-london-england.md  2015-08-13-london-england.md  2015-08-14-london-england-stonehenge.md  2015-08-15-london-england.md  2015-08-16-london-england-warwick.md  (+140 more)
(+1253 files in other folders)
